bk_ida/gccida/g1/aggregate_value_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/aggregate_value_p/src/function.c:4756:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = ( ( unsigned int)( mode_class_0[( BYTE5( type->block.abstract_origin) >> 1) & 0x7F] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/aggregate_value_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/aggregate_value_p/src/obj/function.o] Error 1
